# ds-feedback

./: .dockerignore  .flake8  .isort.cfg  .prettierignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  format.sh  heroku.yml  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run.sh
.github/: pull_request_template.md
.github/actions/check-format/: action.yml
.github/actions/python-tests/: action.yml
.github/workflows/: cd.yml  deploy-docs.yml  pr.yml
app/: __init__.py
app/api/: acl.py  admin.py  apps.py  factories.py  models.py  permissions.py  serializers.py  types.py  urls.py  views.py
app/api/migrations/: 0001_initial.py  0002_projectapiaccess_uuid.py  0003_populate_projectapiaccess_uuid.py  0004_alter_projectapiaccess_uuid.py
app/api/tests/: test_acl.py  test_core_views.py  test_explore_views.py  test_submit_views.py  test_views.py
app/dashboard/: urls.py
app/dashboard/views/: projects.py
app/editor_auth/: apps.py  forms.py  urls.py  views.py
app/editor_ui/: apps.py  factories.py  forms.py  mixins.py  tests.py  urls.py  utils.py  validators.py  views.py
app/editor_ui/tests/: test_api_access_permissions.py  test_feedback_form_permissions.py  test_permissions.py  test_project_membership_views.py  test_project_permissions.py  test_prompt_permissions.py
app/editor_ui/urls/: __init__.py  api_access_urls.py  api_key_urls.py  feedback_form_urls.py  path_pattern_urls.py  project_membership_urls.py  project_urls.py  prompt_option_urls.py  prompt_urls.py  response_urls.py
app/editor_ui/views/: api_access_views.py  api_key_views.py  base_views.py  feedback_form_views.py  membership_views.py  path_pattern_views.py  project_views.py  prompt_views.py  response_views.py  user_views.py
app/feedback_form/: admin.py  apps.py  factories.py  models.py
app/feedback_form/migrations/: 0002_pathpattern.py
app/feedback_form/tests/: tests_views.py
app/feedback_forms/: admin.py  apps.py  factories.py  models.py
app/feedback_forms/migrations/: 0001_initial.py  0002_pathpattern.py  0003_remove_pathpattern_unique_project_pattern_and_more.py  0004_alter_feedbackform_project.py  0004_pathpattern_feedback_fo_pattern_f6d045_gin.py
app/feedback_forms/tests/: tests_views.py
app/lib/: api.py  pagination.py
app/main/: factories.py  urls.py  views.py
app/main/tests/: tests_views.py
app/projects/: admin.py  apps.py  factories.py  models.py
app/projects/migrations/: 0001_initial.py  0002_projectmembership_project_members.py  0002_remove_project_owned_by_projectmembership_and_more.py  0003_add_projectmembership_uuid.py  0004_populate_projectmembership_uuid.py  0005_alter_projectmembership_uuid.py  0006_add_project_normalised_domain.py  0007_populate_project_normalised_domain.py  0008_alter_project_normalised_domain.py  0009_add_project_unique_normalised_domain.py
app/projects/tests/: tests_views.py
app/prompts/: admin.py  apps.py  factories.py  models.py
app/prompts/migrations/: 0001_initial.py  (+3 more)
app/responses/: admin.py  apps.py  factories.py  models.py
app/templates/: 403.html  404.html  500.html  base.html
app/users/: admin.py  factories.py  forms.py  managers.py  models.py
app/utils/: admin.py  models.py  testing.py  views.py
config/: jinja2.py  urls.py
config/settings/: base.py  develop.py  production.py  staging.py  test.py
docs/: data-model.mmd  index.md  key-concepts.md  technical-guide.md  tna-feedback-api.postman_collection.json
src/styles/: feedback.scss
test/main/: test_routes.py
(+71 files in other folders)
