[tool.poetry]
name = "tna-django-application"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-csp = "^3.8"

# Using dj-database-url for the temporary Heroku dev environment
dj-database-url = "^2.3.0"

psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
tna-frontend-jinja = "0.2.18"
whitenoise = "^6.7.0"
django-types = "^0.20.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests-mock = "^1.12.1"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]

[tool.pyright]
include = ["app/**"]
exclude = ["**/migrations"]
extraPaths = [".venv/lib/python3.12/site-packages/"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
