[tool.poetry]
name = "tna-django-application"
version = "0.1.0"
description = ""
authors = ["Andrew Hosgood <andrew.hosgood@nationalarchives.gov.uk>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
dj-database-url = "^2.3.0" # Using dj-database-url for the temporary Heroku dev environment
django = "^5.0.7"
django-csp = "^3.8"
django-model-utils = "^5.0.0"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
python = "^3.12"
requests = "^2.31.0"
tna-frontend-jinja = "0.2.18"
whitenoise = "^6.7.0"


# Group for dev dependencies used in developer environments & dev container
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"
pytest = "^8.1.1"
requests-mock = "^1.12.1"


# Group for dev dependencies used in app container
[tool.poetry.group.dev-app]
optional = true

[tool.poetry.group.dev-app.dependencies]
django-debug-toolbar = "^5.0.1"
django-silk = "^5.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = [
    "test",
]
